# drift

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
configs/: README.md
data/eval/: README.md
data/scenarios/b/: README.md
data/scenarios/e/: README.md
data/sft/: README.md
internal_docs/: Drift — A Study of Conversational Manipu.md  Plan.md
scripts/: README.md
src/drift/: __init__.py
src/drift/attacker/: __init__.py  grpo.py  reward.py  sft.py
src/drift/baselines/: __init__.py  base.py  crescendo.py  finetuned_llama.py  naive.py  pair.py
src/drift/behaviors/: __init__.py  b.py  e.py
src/drift/core/: __init__.py  behavior.py  protocols.py  registry.py
src/drift/env/: __init__.py  dialogue.py  rollout_log.py
src/drift/env/targets/: __init__.py  api_anthropic.py  api_google.py  api_openai.py  base.py  local_vllm.py
src/drift/eval/: __init__.py  catalog.py  harness.py  transfer.py
src/drift/judges/: __init__.py  base.py  extraction.py  persona.py
src/drift/scenarios/: __init__.py  loader.py  schema.py
tests/: test_smoke.py
